FIX Pedidos and Add ENUM statusPedido
