# swagger.yml
@@ -422,7 +422,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Produto"
   #pedido
-  /pedido:
+  /pedidos:
     get:
       summary: Recupera uma lista de pedidos.
       description: Recupera uma lista de pedidos no sistema.
@@ -442,7 +442,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/pedido"
+                  $ref: "#/components/schemas/pedidos"
     post:
       summary: Cria um novo pedido.
       tags:
@@ -468,8 +468,8 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/pedido"
-  /pedido/{id}:
+                $ref: "#/components/schemas/pedidos"
+  /pedidos/{id}:
     get:
       summary: Recupera um pedido pelo ID
       tags:
@@ -487,7 +487,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Pedido"
+                $ref: "#/components/schemas/pedidos"
     put:
       summary: Atualiza os dados de um pedido.
       tags:
@@ -520,7 +520,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Pedido"
+                $ref: "#/components/schemas/pedidos"
     delete:
       summary: Deleta um pedido.
       tags:
@@ -625,5 +625,31 @@ components:
         - "title"
         - "value"
         - "category_id"
+    Pedidos:
+        properties:
+          id:
+            type: integer
+          customer_id:
+            type: integer
+            example: ID Cliente
+          status:
+            type: string
+            properties:
+            enum:
+            - 0- CRIADO
+            - 1- RECEBIDO
+            - 2- EM_PREPARACAO
+            - 3- PRONTO
+            - 4- FINALIZADO
+          created:
+            type: string
+            format: datetime
+          modified:
+            type: string
+            format: datetime
+        required:
+          - "id"
+          - "customer_id"
+          - "status"
 security:
   - BearerAuth: [JWT]
